<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright 2021 Google Inc. All rights reserved.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.GameFragment">
    <data>
        <variable
            name="gvm"
            type="ro.ubbcluj.cs.ds.GameViewModel"/>
        <variable
            name="gasTankImages"
            type="android.content.res.TypedArray"/>
        <variable
            name="gameFragment"
            type="ro.ubbcluj.cs.ds.ui.GameFragment"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/free_or_premium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_std_2x"
                android:contentDescription="@string/content_description_free_vs_premium_indicator"
                android:src="@{gvm.premium ? @drawable/premium : @drawable/free}"
                app:layout_constraintBottom_toTopOf="@+id/gas_gauge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_view"
                tools:src="@drawable/free" />

            <ImageView
                android:id="@+id/gas_gauge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_std_2x"
                android:layout_marginEnd="@dimen/margin_std_2x"
                android:contentDescription="@string/content_description_gas_gauge_indicator"
                android:src="@{gasTankImages.getDrawable(gvm.gasUnitsRemaining)}"
                app:layout_constraintBottom_toTopOf="@+id/drive_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/free_or_premium"
                tools:src="@drawable/gas4" />

            <Button
                android:id="@+id/drive_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_std_2x"
                android:layout_marginEnd="@dimen/margin_std_half"
                android:enabled="@{gvm.canDrive()}"
                android:gravity="center_horizontal|center_vertical"
                android:minWidth="120dp"
                android:minHeight="48dp"
                android:onClick="@{()->gameFragment.drive()}"
                android:text="@string/button_drive"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/buy_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gas_gauge" />

            <Button
                android:id="@+id/buy_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_std_half"
                android:gravity="center_horizontal|center_vertical"
                android:minWidth="120dp"
                android:minHeight="48dp"
                android:onClick="@{(view) -> gameFragment.purchase(view)}"
                android:text="@string/button_buy"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/drive_button"
                app:layout_constraintTop_toTopOf="@+id/drive_button" />

            <TextView
                android:id="@+id/title_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_std_2x"
                android:src="@drawable/title"
                android:text="@string/app_name"
                android:textSize="24sp"
                app:fontFamily="@font/press_start_2p"
                app:layout_constraintBottom_toTopOf="@+id/free_or_premium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>

